
- Updated japanese translation
- Updated german translation
- Updated italian translation

- Added one new plugin:
	- XHamster (thanks to Supelex Technologies)

- Changed plug-in:
	- Aniboom
	- Atom
	- Break
	- Caught on Tape (before known as Caught on Video)
	- Cinemavip
	- DailyMotion
	- Disclose
	- Shred or Die
	- Streetfire
	- Keezmovies
	- XHamster
	- XTube

Plug-ins SDK:
-------------

- Fixed bug (Error: The empty selections were not detected by "copyBetween" function)

Mac OS X:
---------

- Compiled with Qt 4.6.3

- Fixed bug (Error: Modal sheets were not responding to mouse events correctly)

2.4:
----

- The Http core has been fully rewritten from scratch, the result is a better performance and stability:
	- The latest Qt4 tecnologies are used
	- Added gzip support
	- Added more explicative errors
	- Imporved the time-out control
	- Improved the proxy support
	- Improved the cookies support
	- Reduced the CPU usage

- Added the "What's new" functionality
- Added the winPenPack in credits window
- Added video items multiselection manipulation
- Added possibility to queue downloads
- Added the "Error code" in bug-report sent information
- Added Network configuration options
- Added Russian translation (thanks to h31)

- Improved the automatic updates
- Improved the image previewer (search videos)

- Revised English translation
- Revised Spanish translation
- Revised Catalan translation

- Changed "Move UP" and "Move DOWN" shortcut to "Alt + up" and "Alt + down"
- Changed plug-in:
	- YouTube (new site supported)
	- YouTubeIslam (renamed to TubeIslam)

- Fixed bug (Error: The session was not restored correctly)
- Fixed bug (Error: The converted file names where truncated if a "." was present)
- Fixed bug (Error: The main window was freezed when an active search was interrupted)
- Fixed bug (Error: The resuming downloads were never started in some rare situations)
- Fixed bug (Error: The "Invalid URL" error was not assigned with invalid URLs)